crates/ruff_linter/src/rules/isort/snapshots/ruff_linter__rules__isort__tests__length_sort_straight__length_sort_straight_and_from_imports.py.snap
---
source: crates/ruff_linter/src/rules/isort/mod.rs
---
length_sort_straight_and_from_imports.py:1:1: I001 (unsorted-imports) [*] Import block is un-sorted or un-formatted
  |
1 | / import mediuuuuuum
2 | | import short
3 | | import looooooooooooooooong
4 | | from looooooooooooooong import a
5 | | from mediuuuum import c
6 | | from short import b
  | |___________________^ I001 (unsorted-imports)
  |
  = help: Organize imports

ℹ Safe fix
  1 |+import short
1 2 | import mediuuuuuum
2   |-import short
3 3 | import looooooooooooooooong
4 4 | from looooooooooooooong import a
5 5 | from mediuuuum import c
