crates/ruff_linter/src/rules/isort/snapshots/ruff_linter__rules__isort__tests__length_sort_straight__length_sort_straight_imports.py.snap
---
source: crates/ruff_linter/src/rules/isort/mod.rs
---
length_sort_straight_imports.py:1:1: I001 (unsorted-imports) [*] Import block is un-sorted or un-formatted
  |
1 | / import mediuuuuuumb
2 | | import short
3 | | import looooooooooooooooong
4 | | import mediuuuuuuma
  | |___________________^ I001 (unsorted-imports)
  |
  = help: Organize imports

ℹ Safe fix
  1 |+import short
  2 |+import mediuuuuuuma
1 3 | import mediuuuuuumb
2   |-import short
3 4 | import looooooooooooooooong
4   |-import mediuuuuuuma
